--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -21,6 +21,14 @@
     }
 }
 
+@mixin heading4 {
+    h4 {
+        font-size: 18px;
+        font-weight: bold;
+        letter-spacing: 0px;
+    }
+}
+
 @mixin paragraph {
     p {
         font-size: 18px;
