--- a/css/main.css
+++ b/css/main.css
@@ -12393,11 +12393,10 @@ body {
   color: var(--bs-darker-text);
   margin: 0;
 }
-
-.tiles-row .row {
+.testimonials-component .tiles-row .row {
   padding: 30px 0;
 }
-.tiles-row .card-group .tile {
+.testimonials-component .tiles-row .card-group .tile {
   background-color: var(--bs-tertiary-background);
   border: none;
   border-radius: 0;
@@ -12407,18 +12406,18 @@ body {
   justify-content: center;
   align-items: center;
 }
-.tiles-row .card-group .tile .card-body {
+.testimonials-component .tiles-row .card-group .tile .card-body {
   padding: 30px;
 }
-.tiles-row .card-group .tile .card-body .testimonial-icon {
+.testimonials-component .tiles-row .card-group .tile .card-body .testimonial-icon {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.tiles-row .card-group .tile .card-body .testimonial-icon img {
+.testimonials-component .tiles-row .card-group .tile .card-body .testimonial-icon img {
   padding: 30px;
 }
-.tiles-row .card-group .tile .card-body .card-text {
+.testimonials-component .tiles-row .card-group .tile .card-body .card-text {
   color: var(--bs-lighter-text);
   text-align: center;
   height: 162px;
@@ -12426,7 +12425,7 @@ body {
   align-items: center;
   justify-content: center;
 }
-.tiles-row .card-group .tile .card-body .testimonial-author {
+.testimonials-component .tiles-row .card-group .tile .card-body .testimonial-author {
   color: var(--bs-darker-text);
   text-align: center;
   font-weight: bold;
@@ -12551,6 +12550,137 @@ body {
 }
 .footer-end-container .payment-options-container img {
   margin: 0 10px;
+}
+
+/****************** ABOUT US - HERO ******************/
+.about-hero-component {
+  position: relative;
+  min-height: 400px;
+  background-color: var(--bs-primary-background);
+}
+.about-hero-component .about-hero-content-container {
+  z-index: 1;
+  width: 100%;
+}
+.about-hero-component .about-hero-content-container h1, .about-hero-component .about-hero-content-container .h1 {
+  color: var(--bs-lighter-text);
+  width: 100%;
+  text-align: center;
+}
+.about-hero-component .bg-image-container {
+  width: 100%;
+  position: absolute;
+}
+.about-hero-component .bg-image-container img {
+  width: 100%;
+  filter: brightness(60%);
+}
+
+/****************** ABOUT US - DISCOVER OUR STORY ******************/
+.about-discover-container {
+  background-color: var(--bs-primary-background);
+}
+.about-discover-container .row {
+  padding: 30px 0;
+}
+.about-discover-container .row .about-discover-image {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.about-discover-container .row .about-discover-image img {
+  width: 100%;
+}
+.about-discover-container .row .about-discover-text-container {
+  width: 50%;
+}
+.about-discover-container .row .about-discover-text-container h2, .about-discover-container .row .about-discover-text-container .h2 {
+  color: var(--bs-darker-text);
+  text-align: left;
+  margin: 0 0 20px 10px;
+  width: 90%;
+}
+.about-discover-container .row .about-discover-text-container .about-discover-text-p {
+  color: var(--bs-darker-text);
+  margin: 0 0 20px 10px !important;
+  width: 85%;
+}
+
+/****************** ABOUT US - GALLERY ******************/
+.about-gallery-container {
+  background-color: var(--bs-primary-background);
+}
+.about-gallery-container .row {
+  padding: 30px 0;
+}
+
+/****************** ABOUT US - BAKING PHILOSOPHY ******************/
+.about-philosophy-component {
+  background-color: var(--bs-primary-background);
+  margin: 60px 0;
+}
+.about-philosophy-component .about-philosophy-container {
+  width: 50%;
+}
+.about-philosophy-component .about-philosophy-container .about-philosophy-text-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.about-philosophy-component .about-philosophy-container .about-philosophy-text-container h2, .about-philosophy-component .about-philosophy-container .about-philosophy-text-container .h2 {
+  text-align: center;
+  color: var(--bs-darker-text);
+  margin-bottom: 15px;
+}
+.about-philosophy-component .tiles-row .row {
+  padding: 30px 0;
+}
+.about-philosophy-component .tiles-row .card-group .tile-dark {
+  background-color: var(--bs-tertiary-background);
+  border: none;
+  border-radius: 0;
+  width: 95%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about-philosophy-component .tiles-row .card-group .tile-dark .card-body {
+  padding: 50px;
+  height: 400px;
+}
+.about-philosophy-component .tiles-row .card-group .tile-dark .card-body h3, .about-philosophy-component .tiles-row .card-group .tile-dark .card-body .h3 {
+  color: var(--bs-lighter-text);
+  font-weight: bold;
+}
+.about-philosophy-component .tiles-row .card-group .tile-dark .card-body .card-text {
+  color: var(--bs-lighter-text);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.about-philosophy-component .tiles-row .card-group .tile-light {
+  background-color: var(--bs-secondary-background);
+  border: none;
+  border-radius: 0;
+  width: 95%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about-philosophy-component .tiles-row .card-group .tile-light .card-body {
+  padding: 50px;
+  height: 400px;
+}
+.about-philosophy-component .tiles-row .card-group .tile-light .card-body h3, .about-philosophy-component .tiles-row .card-group .tile-light .card-body .h3 {
+  color: var(--bs-darker-text);
+  font-weight: bold;
+}
+.about-philosophy-component .tiles-row .card-group .tile-light .card-body .card-text {
+  color: var(--bs-darker-text);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /****************** SHOP - HERO ******************/
