--- a/css/main.scss
+++ b/css/main.scss
@@ -451,50 +451,50 @@ body {
             }
         }
     }
-}
 
-.tiles-row {
-    .row{
-        padding: 30px 0;
-    }
-
-    .card-group {
-        .tile {
-            background-color: var(--bs-tertiary-background);
-            border: none;
-            border-radius: 0;
-            width: 95%;
-            box-shadow: 0px 8px 24px #00000026;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-
-            .card-body {
-                padding: 30px;
-
-                .testimonial-icon {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
+    .tiles-row {
+        .row{
+            padding: 30px 0;
+        }
     
-                    img {
-                        padding: 30px;
+        .card-group {
+            .tile {
+                background-color: var(--bs-tertiary-background);
+                border: none;
+                border-radius: 0;
+                width: 95%;
+                box-shadow: 0px 8px 24px #00000026;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+    
+                .card-body {
+                    padding: 30px;
+    
+                    .testimonial-icon {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+        
+                        img {
+                            padding: 30px;
+                        }
                     }
-                }
-    
-                .card-text {
-                    color: var(--bs-lighter-text);
-                    text-align: center;
-                    height: 162px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                }
-    
-                .testimonial-author {
-                    color: var(--bs-darker-text);
-                    text-align: center;
-                    font-weight: bold;
+        
+                    .card-text {
+                        color: var(--bs-lighter-text);
+                        text-align: center;
+                        height: 162px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
+        
+                    .testimonial-author {
+                        color: var(--bs-darker-text);
+                        text-align: center;
+                        font-weight: bold;
+                    }
                 }
             }
         }
@@ -645,6 +645,168 @@ body {
 
     .payment-options-container img {
         margin: 0 10px;
+    }
+}
+
+/****************** ABOUT US - HERO ******************/
+
+.about-hero-component{
+    position: relative;
+    min-height: 400px;
+    background-color: var(--bs-primary-background);
+
+    .about-hero-content-container{
+        z-index: 1;
+        width: 100%;
+
+        h1 {
+            color: var(--bs-lighter-text);
+            width: 100%;
+            text-align: center;
+        }
+    }
+
+    .bg-image-container{
+        width: 100%;
+        position: absolute;
+    
+        img {
+            width: 100%;
+            filter: brightness(60%);
+        }
+    }
+}
+
+/****************** ABOUT US - DISCOVER OUR STORY ******************/
+
+.about-discover-container {
+    background-color: var(--bs-primary-background);
+
+    .row{
+        padding: 30px 0;
+          
+        .about-discover-image {
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+
+            img {
+                width: 100%;
+            }
+        }
+
+        .about-discover-text-container {
+            width: 50%;
+            
+            h2 {
+                color: var(--bs-darker-text);
+                text-align: left;
+                margin: 0 0 20px 10px;
+                width: 90%;
+            }
+
+            .about-discover-text-p{
+                color: var(--bs-darker-text);
+                margin: 0 0 20px 10px!important;
+                width: 85%;
+            }
+        }
+    }
+}
+
+/****************** ABOUT US - GALLERY ******************/
+
+.about-gallery-container {
+    background-color: var(--bs-primary-background);
+
+    .row{
+        padding: 30px 0;
+    }
+}
+
+/****************** ABOUT US - BAKING PHILOSOPHY ******************/
+
+.about-philosophy-component{
+    background-color: var(--bs-primary-background);
+    margin: 60px 0;
+
+    .about-philosophy-container {
+        width: 50%;
+    
+        .about-philosophy-text-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+    
+            h2 {
+                text-align: center;
+                color: var(--bs-darker-text);
+                margin-bottom: 15px;
+            }
+        }
+    }
+
+    .tiles-row {
+        .row{
+            padding: 30px 0;
+        }
+    
+        .card-group {
+            .tile-dark {
+                background-color: var(--bs-tertiary-background);
+                border: none;
+                border-radius: 0;
+                width: 95%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                .card-body {
+                    padding: 50px;
+                    height: 400px;
+    
+                    h3 {
+                        color: var(--bs-lighter-text);
+                        font-weight: bold;
+                    }
+        
+                    .card-text {
+                        color: var(--bs-lighter-text);
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
+                }
+            }
+
+            .tile-light {
+                background-color: var(--bs-secondary-background);
+                border: none;
+                border-radius: 0;
+                width: 95%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                .card-body {
+                    padding: 50px;
+                    height: 400px;
+    
+                    h3 {
+                        color: var(--bs-darker-text);
+                        font-weight: bold;
+                    }
+        
+                    .card-text {
+                        color: var(--bs-darker-text);
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                    }
+                }
+            }
+        }
     }
 }
 
